add style for footer and rearrange display div to be more dynamic.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,42 @@
   </div>
 
 <body>
+  <div class="container">
+    <div id="display" >
+      <div class="pic alaska">
+        <h2><span class="name"></span>, you should visit rugged Alaska!</h2>
+        <img src="img/alaska.jpg" alt="" />
+      </div>
+
+      <div class="pic fiji">
+        <h2><span class="name"></span>, check out sunny Fiji!</h2>
+        <img src="img/fiji.jpeg" alt="" />
+      </div>
+
+      <div class="pic hawaii">
+        <h2><span class="name"></span>, say aloha to Hawaii!</h2>
+        <img src="img/hawaii.jpg" alt="" />
+      </div>
+
+      <div class="pic rome">
+        <h2>Hey, <span class="name"></span>, how about the seat of Italian culture, Rome?</h2>
+        <img src="img/rome.jpg" alt="" />
+      </div>
+
+      <div class="pic newyork">
+        <h2>Visit the Big Apple, <span class="name"></span>!</h2>
+        <img src="img/newyork.jpg" alt="" />
+      </div>
+
+      <div class="pic iceland">
+        <h2>Bundle up, <span class="name"></span>, your headed for Iceland!</h2>
+        <img src="img/iceland.jpg" alt="" />
+      </div>
+
+      <div class="pic error">
+        <h2>Hmm... Sorry, <span class="name">, </span> there are no matches at this time. Please try again.</h2>
+      </div>
+    </div>
   <form id = "radios">
     <div class="namegetter">
       <label for="name">First, tell us your name: </label>
@@ -103,46 +139,13 @@
         </label>
       </div>
     </div>
-
-  <center><button id="sub" type="submit" class="btn">Submit</button></center>
-  </form>
-  <div id="display">
-
-    <div class="pic alaska">
-      <h2><span class="name"></span>, you should visit rugged Alaska!</h2>
-      <img src="img/alaska.jpg" alt="" />
-    </div>
-
-    <div class="pic fiji">
-      <h2><span class="name"></span>, check out sunny Fiji!</h2>
-      <img src="img/fiji.jpeg" alt="" />
-    </div>
-
-    <div class="pic hawaii">
-      <h2><span class="name"></span>, say aloha to Hawaii!</h2>
-      <img src="img/hawaii.jpg" alt="" />
-    </div>
-
-    <div class="pic rome">
-      <h2>Hey ,<span class="name"></span>, how about the seat of Italian culture, Rome?</h2>
-      <img src="img/rome.jpg" alt="" />
-    </div>
-
-    <div class="pic newyork">
-      <h2>Visit the Big Apple, <span class="name"></span>!</h2>
-      <img src="img/newyork.jpg" alt="" />
-    </div>
-
-    <div class="pic iceland">
-      <h2>Bundle up, <span class="name"></span>, your headed for Iceland!</h2>
-      <img src="img/iceland.jpg" alt="" />
-    </div>
-
-    <div class="pic error">
-      <h2>Hmm... Sorry, <span class="name">, </span> there are no matches at this time. Please try again.</h2>
-    </div>
+  <div class="butdiv">
+    <center><button id="sub" type="submit" class="btn">Submit</button></center>
   </div>
+  </form>
+</div>
+</body>
+  <div class="footer" id="foot">
 
-
-  </body>
+  </div>
 </html>
