--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.12.2.js"></script>
@@ -11,7 +12,7 @@
 
   <div class="head">
     <header id="header">
-      <h1>Let's pick a vacation for you!</h1>
+      <h1>I'll help you pick your next vacation!</h1>
     </header>
   </div>
 
@@ -52,11 +53,14 @@
         <h2>Hmm... Sorry, <span class="name">, </span> there are no matches at this time. Please try again.</h2>
       </div>
     </div>
-  <form id = "radios">
+      <div class="default">
+        <h3>Your suggestion will appear here after you have made your selection.</h3>
+      </div>
+  <form id ="radios">
     <div class="namegetter">
       <label for="name">First, tell us your name: </label>
       <input id="namer" type="text" name="name" value="" placeholder="Name">
-      <span data-alertid="example"></span>
+      <span id="alert"></span>
     </div>
     <div id="trees">
       <div class="radio">
@@ -139,13 +143,12 @@
         </label>
       </div>
     </div>
-  <div class="butdiv">
-    <center><button id="sub" type="submit" class="btn">Submit</button></center>
+      <div class="butdiv">
+        <center><button id="sub" type="submit" class="btn">Submit</button></center>
+      </div>
+    </form>
   </div>
-  </form>
-</div>
 </body>
   <div class="footer" id="foot">
-
   </div>
 </html>
