add more destinations for user with accomanying JS.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,26 @@
         <img src="img/iceland.jpg" alt="" />
       </div>
 
+      <div class="pic moscow">
+        <h2>Bundle up, Comrade <span class="name"></span>, your headed for Moscow!</h2>
+        <img src="img/moscow.jpg" alt="" />
+      </div>
+
+      <div class="pic diego">
+        <h2>I suggest San Diego! Keep it classy, <span class="name"></span>.</h2>
+        <img src="img/diego.jpg" alt="" />
+      </div>
+
+      <div class="pic utah">
+        <h2>Check out beautiful Monument Valley,  <span class="name"></span>.</h2>
+        <img src="img/utah.jpg" alt="" />
+      </div>
+
+      <div class="pic portland">
+        <h2>Head to Portland, <span class="name"></span>.</h2>
+        <img src="img/portland.jpg" alt="" />
+      </div>
+
       <div class="pic error">
         <h2>Hmm... Sorry, <span class="name">, </span> there are no matches at this time. Please try again.</h2>
       </div>
