finalize design and prepare for submission.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
   <form id ="radios">
     <div class="namegetter">
-      <label for="name">First, tell us your name: </label>
+      <label for="name">First, tell me your name: </label>
       <input id="namer" type="text" name="name" value="" placeholder="Name">
       <span id="alert"></span>
     </div>
